Update one file per namespace examples
1) Add `in-ns` examples

2) Follow style recommendation of no single-segmented namespaces

3) Tweak presentation of namespace and add `in-ns` to multiple files
example

--- a/README.adoc
+++ b/README.adoc
@@ -339,16 +339,22 @@ Avoid trailing whitespace.
 
 === One File Per Namespace [[one-file-per-namespace]]
 
-Use exactly one file per namespace.
+Use one file per namespace and one namespace per file.
 
 ----
 ;; good 
-(ns foo)
+(ns foo.bar)
 
 ;; bad 
-(ns foo)
-(ns bar)
-;; bad - ns foo in multiple files
+(ns foo.bar)
+(ns baz.qux)
+
+;; bad
+(in-ns quux.quuz)
+(in-ns quuz.corge)
+
+;; bad 
+(ns foo.bar) or (in-ns foo.bar) in multiple files
 ----
 
 == Namespace Declaration
