Improve the  guideline for one file per namespace (#193)
1) Add `ns` and `in-ns` examples

2) Follow style recommendation of no single-segmented namespaces

--- a/README.adoc
+++ b/README.adoc
@@ -339,7 +339,23 @@ Avoid trailing whitespace.
 
 === One File Per Namespace [[one-file-per-namespace]]
 
-Use one file per namespace.
+Use one file per namespace and one namespace per file.
+
+----
+;; good 
+(ns foo.bar)
+
+;; bad 
+(ns foo.bar)
+(ns baz.qux)
+
+;; bad
+(in-ns quux.quuz)
+(in-ns quuz.corge)
+
+;; bad 
+(ns foo.bar) or (in-ns foo.bar) in multiple files
+----
 
 == Namespace Declaration
 
