--- a/README.adoc
+++ b/README.adoc
@@ -2158,7 +2158,7 @@ automatically generate proper `ns` declarations from your existing code.
 Clojure which uses https://github.com/clojure/core.logic[core.logic] to
 search for patterns of code for which there might exist a more idiomatic
 function or macro.
-* https://github.com/borkdude/clj-kondo[clj-kondo] is linter that detects
+* https://github.com/borkdude/clj-kondo[clj-kondo] is a linter that detects
 a wide number of discouraged patterns and suggests improvements based on this
 style guide
 
