--- a/README.adoc
+++ b/README.adoc
@@ -1367,17 +1367,17 @@ Sometimes, it is good practice to give an explicit name to unused arguments, for
 [source,clojure]
 ----
 ;; good
-(defn [a _]
+(defn myfun1 [a _]
  (println a))
  
-(defn [a {:keys [b c]}]
+(defn myfun2 [a {:keys [b c]}]
  (println a b c))
 
 ;; better
-(defn [a _b]
+(defn myfun1 [a _b]
  (println a))
 
-(defn [a {:keys [b c] :as _mymap}]
+(defn myfun2 [a {:keys [b c] :as _mymap}]
  (println a b c))
 ----
 
