Extend the guideline on line length

--- a/README.adoc
+++ b/README.adoc
@@ -88,6 +88,40 @@ ugly and unreadable. Leave out the "but their own" and they're
 probably right...
 ____
 
+[#80-character-limits]
+=== Maximum Line Length [[line-length]]
+
+Where feasible, avoid making lines longer than 80 characters.
+
+.Why Bother with 80 characters in a World of Modern Widescreen Displays?
+****
+
+A lot of people these days feel that a maximum line length of 80 characters is
+just a remnant of the past and makes little sense today. After all - modern
+displays can easily fit 200+ characters on a single line.  Still, there are some
+important benefits to be gained from sticking to shorter lines of code.
+
+First, and foremost - numerous studies have shown that humans read much faster
+vertically and very long lines of text impede the reading process. As noted
+earlier, one of the guiding principles of this style guide is to optimize the
+code we write for human consumption.
+
+Additionally, limiting the required editor window width makes it possible to
+have several files open side-by-side, and works well when using code review
+tools that present the two versions in adjacent columns.
+
+The default wrapping in most tools disrupts the visual structure of the code,
+making it more difficult to understand. The limits are chosen to avoid wrapping
+in editors with the window width set to 80, even if the tool places a marker
+glyph in the final column when wrapping lines. Some web based tools may not
+offer dynamic line wrapping at all.
+
+Some teams strongly prefer a longer line length. For code maintained exclusively
+or primarily by a team that can reach agreement on this issue, it is okay to
+increase the line length limit up to 100 characters, or all the way up
+to 120 characters. Please, restrain the urge to go beyond 120 characters.
+****
+
 === Tabs vs Spaces [[spaces]]
 
 Use *spaces* for indentation. No hard tabs.
@@ -326,11 +360,6 @@ An exception to the rule is the grouping of related ``def``s together.
 Do not place blank lines in the middle of a function or
 macro definition.  An exception can be made to indicate grouping of
 pairwise constructs as found in e.g. `let` and `cond`.
-
-[#80-character-limits]
-=== Maximum Line Length [[line-length]]
-
-Where feasible, avoid making lines longer than 80 characters.
 
 === No Trailing Whitespace [[no-trailing-whitespace]]
 
