Include rule for terminating files with a newline (#211)

--- a/README.adoc
+++ b/README.adoc
@@ -250,6 +250,12 @@ $ git config --global core.autocrlf true
 ----
 ====
 
+=== Terminate Files with a Newline [[terminate-files-with-a-newline]]
+
+End each file with a newline.
+
+TIP: This should be done by through editor configuration, not manually.
+
 === Bracket Spacing [[bracket-spacing]]
 
 If any text precedes an opening bracket(`(`, `{` and
