--- a/README.adoc
+++ b/README.adoc
@@ -1489,7 +1489,7 @@ Prefer the use of keywords for hash keys.
 {"name" "Bruce" "age" 30}
 ----
 
-=== Literal Col Syntax [[literal-col-syntax]]
+=== Literal Collection Syntax [[literal-col-syntax]]
 
 Prefer the use of the literal collection syntax where
 applicable. However, when defining sets, only use literal syntax
@@ -1508,11 +1508,11 @@ when the values are compile-time constants.
 #{(func1) (func2)} ; will throw runtime exception if (func1) = (func2)
 ----
 
-=== Avoid Index Based Coll Access [[avoid-index-based-coll-access]]
+=== Avoid Index Based Collection Access [[avoid-index-based-coll-access]]
 
 Avoid accessing collection members by index whenever possible.
 
-=== Keywords As Fn To Get Map Values [[keywords-as-fn-to-get-map-values]]
+=== Keywords as Functions for Map Values Retrieval [[keywords-as-fn-to-get-map-values]]
 
 Prefer the use of keywords as functions for retrieving values from
 maps, where applicable.
@@ -1531,7 +1531,7 @@ maps, where applicable.
 (m :name)
 ----
 
-=== Colls As Fns [[colls-as-fns]]
+=== Collections as Functions [[colls-as-fns]]
 
 Leverage the fact that most collections are functions of their elements.
 
@@ -1543,7 +1543,7 @@ Leverage the fact that most collections are functions of their elements.
 ;; bad - too ugly to share
 ----
 
-=== Keywords As Fns [[keywords-as-fns]]
+=== Keywords as Functions [[keywords-as-fns]]
 
 Leverage the fact that keywords can be used as functions of a collection.
 
@@ -1552,12 +1552,12 @@ Leverage the fact that keywords can be used as functions of a collection.
 ((juxt :a :b) {:a "ala" :b "bala"})
 ----
 
-=== Avoid Transient Colls [[avoid-transient-colls]]
+=== Avoid Transient Collections [[avoid-transient-colls]]
 
 Avoid the use of transient collections, except for
 performance-critical portions of the code.
 
-=== Avoid Java Colls [[avoid-java-colls]]
+=== Avoid Java Collections [[avoid-java-colls]]
 
 Avoid the use of Java collections.
 
