--- a/README.adoc
+++ b/README.adoc
@@ -34,8 +34,8 @@ I didn't come up with all the rules out of nowhere; they are mostly
 based on my extensive career as a professional software engineer,
 feedback and suggestions from members of the Clojure community, and
 various highly regarded Clojure programming resources, such as
-http://www.clojurebook.com/["Clojure Programming"]
-and http://joyofclojure.com/["The Joy of Clojure"].
+https://www.clojurebook.com/["Clojure Programming"]
+and https://joyofclojure.com/["The Joy of Clojure"].
 
 NOTE: The guide is still a work in progress; some sections are missing,
 others are incomplete, some rules are lacking examples, some rules
@@ -2306,6 +2306,34 @@ function or macro.
 a wide number of discouraged patterns and suggests improvements, based on this
 style guide.
 
+== History
+
+This guide was started in 2013 by https://github.com/bbatsov[Bozhidar Batsov], following the
+success of a https://rubystyle.guide/[similar project] he had created in the Ruby community.
+
+Bozhidar was very passionate about both Clojure and good programming style and he wanted to bridge the between what was
+covered by the https://clojure.org/community/contrib_howto#_coding_guidelines[Clojure library coding guidelines] and what the style guides for languages like Java, Python and Ruby would typically cover.
+Bozhidar still serves as the guide's primary editor, but he definitely wouldn't mind enlisting a few more editors to help with the
+maintenance work.
+
+Since the inception of the guide we've received a lot of feedback from members of the exceptional Clojure community around the world.
+Thanks for all the suggestions and the support! Together we can make a resource beneficial to each and every Clojure developer out there.
+
+== Sources of Inspiration
+
+Many people, books, presentations, articles and other style guides influenced the community Clojure style guide. Here are some of them:
+
+* https://en.wikipedia.org/wiki/The_Elements_of_Style[The Elements of Style]
+* https://en.wikipedia.org/wiki/The_Elements_of_Programming_Style[The Elements of Programming Style]
+* https://www.python.org/dev/peps/pep-0008/[PEP-8]
+* https://rubystyle.guide/[Community Ruby Style Guide]
+* https://clojure.org/community/contrib_howto#_coding_guidelines[Clojure Library Coding Guidelines]
+* https://www.clojurebook.com/["Clojure Programming"]
+* https://joyofclojure.com/["The Joy of Clojure"]
+* https://elementsofclojure.com/["Elements of Clojure"]
+* https://pragprog.com/titles/vmclojeco/clojure-applied/["Clojure Applied"]
+* https://stuartsierra.com/tag/dos-and-donts[Stuart Sierra's "Clojure Dos and Don't" blog series]
+
 == Contributing
 
 Nothing written in this guide is set in stone. It's my desire to work
@@ -2323,6 +2351,23 @@ CIDER, nREPL, orchard, etc) with financial contributions via one of the followin
 * https://ko-fi.com/bbatsov[ko-fi]
 * https://www.patreon.com/bbatsov[Patreon]
 * https://www.paypal.me/bbatsov[PayPal]
+
+=== How to Contribute?
+
+It's easy, just follow the contribution guidelines below:
+
+* https://help.github.com/articles/fork-a-repo[Fork] https://github.com/bbatsov/clojure-style-guide[bbatsov/clojure-style-guide] on GitHub
+* Make your feature addition or bug fix in a feature branch.
+* Include a http://tbaggery.com/2008/04/19/a-note-about-git-commit-messages.html[good description] of your changes
+* Push your feature branch to GitHub
+* Send a https://help.github.com/articles/using-pull-requests[Pull Request]
+
+== Colophon
+
+This guide is written in https://asciidoc.org/[AsciiDoc] and is published as HTML using https://asciidoctor.org/[AsciiDoctor].
+The HTML version of the guide is hosted on GitHub Pages.
+
+Originally the guide was written in Markdown, but was converted to AsciiDoc in 2019.
 
 == License
 
