--- a/README.adoc
+++ b/README.adoc
@@ -2379,7 +2379,7 @@ Many people, books, presentations, articles and other style guides influenced th
 
 * https://en.wikipedia.org/wiki/The_Elements_of_Style[The Elements of Style]
 * https://en.wikipedia.org/wiki/The_Elements_of_Programming_Style[The Elements of Programming Style]
-* https://www.python.org/dev/peps/pep-0008/[PEP-8]
+* https://www.python.org/dev/peps/pep-0008/[Python Style Guide (PEP-8)]
 * https://rubystyle.guide/[Community Ruby Style Guide]
 * https://clojure.org/community/contrib_howto#_coding_guidelines[Clojure Library Coding Guidelines]
 * https://www.clojurebook.com/["Clojure Programming"]
