--- a/README.adoc
+++ b/README.adoc
@@ -37,6 +37,8 @@ various highly regarded Clojure programming resources, such as
 https://www.clojurebook.com/["Clojure Programming"]
 and https://joyofclojure.com/["The Joy of Clojure"].
 
+This style guide evolves over time as additional conventions are identified and past conventions are rendered obsolete by changes in Clojure itself.
+
 NOTE: The guide is still a work in progress; some sections are missing,
 others are incomplete, some rules are lacking examples, some rules
 don't have examples that illustrate them clearly enough. In due time
@@ -70,7 +72,60 @@ gem install rouge
 ====
 endif::[]
 
-== Translations
+=== Guiding Principles
+
+[quote, Harold Abelson, Structure and Interpretation of Computer Programs]
+____
+Programs must be written for people to read, and only incidentally for machines to execute.
+____
+
+It's common knowledge that code is read much more often than it is written.
+The guidelines provided here are intended to improve the readability of code and make it consistent across the wide spectrum of Clojure code.
+They are also meant to reflect real-world usage of Clojure instead of a random ideal. When I had to choose between a very established practice
+and a subjectively better alternative I've opted to recommend the established practice.footnote:[Occasionally I might suggest to the reader to consider some alternatives, though.]
+
+There are some areas in which there is no clear consensus in the Clojure community regarding a particular style (like semantic indentation vs fixed indentation, semantic comments vs uniform comments, etc).
+In such scenarios all popular styles are acknowledged and it's up to you to pick one and apply it consistently.
+
+Fortunately Clojure is a Lisp, and Lisps are fundamentally
+simple. Even though this guide was created a few years after Clojure
+(I published the first version in early 2013), you could see that most
+Clojure code in the wild was fairly uniform. I attribute this to
+both the simplicity I already mentioned and to the fact that since day
+1 Clojurists adopted many of the style conventions of other
+established Lisp dialects (e.g. Common Lisp and Scheme).  This made
+the work on this guide fairly easy and straight-forward, especially compared to
+the massive exercise in frustration that was the
+https://rubystyle.guide[Community Ruby Style Guide].footnote:[You'll notice that the Clojure style guide is pretty similar in structure to the Ruby style guide, which served as its main source of inspiration.]
+
+Clojure is famously optimized for simplicity and clarity. I'd like to believe that this guide is going to help you optimize for maximum
+simplicity and clarity.
+
+=== A Note about Consistency
+
+[quote, Ralph Waldo Emerson]
+____
+A foolish consistency is the hobgoblin of little minds, adored by little statesmen and philosophers and divines.
+____
+
+A style guide is about consistency.footnote:[This section is heavily inspired by Python's PEP-8]
+Consistency with this style guide is important.
+Consistency within a project is more important.
+Consistency within one class or method is the most important.
+
+However, know when to be inconsistent -- sometimes style guide recommendations just aren't applicable. When in doubt, use your best judgment.
+Look at other examples and decide what looks best. And don't hesitate to ask!
+
+In particular: do not break backwards compatibility just to comply with this guide!
+
+Some other good reasons to ignore a particular guideline:
+
+* When applying the guideline would make the code less readable, even for someone who is used to reading code that follows this style guide.
+* To be consistent with surrounding code that also breaks it (maybe for historic reasons) -- although this is also an opportunity to clean up someone else's mess (in true XP style).
+* Because the code in question predates the introduction of the guideline and there is no other reason to be modifying that code.
+* When the code needs to remain compatible with older versions of Clojure that don't support the feature recommended by the style guide.
+
+=== Translations
 
 Translations of the guide are available in the following languages:
 
