--- a/README.adoc
+++ b/README.adoc
@@ -31,13 +31,17 @@ tried to add the rationale behind the rules (if it's omitted, I've
 assumed that it's pretty obvious).
 
 I didn't come up with all the rules out of nowhere; they are mostly
-based on my extensive career as a professional software engineer,
-feedback and suggestions from members of the Clojure community, and
+based on my extensive career as a software engineer,
+my work on many Clojure open-source projectsfootnote:[CIDER, nREPL, Orchard, etc.],
+feedback and suggestions from numerous members of the Clojure community, and
 various highly regarded Clojure programming resources, such as
 https://www.clojurebook.com/["Clojure Programming"]
 and https://joyofclojure.com/["The Joy of Clojure"].
 
-This style guide evolves over time as additional conventions are identified and past conventions are rendered obsolete by changes in Clojure itself.
+Nothing written here is set in stone.
+This style guide evolves over time as additional conventions are
+identified and past conventions are rendered obsolete by changes in
+Clojure itself.
 
 NOTE: The guide is still a work in progress; some sections are missing,
 others are incomplete, some rules are lacking examples, some rules
