--- a/README.adoc
+++ b/README.adoc
@@ -430,7 +430,45 @@ An exception to the rule is the grouping of related ``def``s together.
 
 Do not place blank lines in the middle of a function or
 macro definition.  An exception can be made to indicate grouping of
-pairwise constructs as found in e.g. `let` and `cond`.
+pairwise constructs as found in e.g. `let` and `cond`, in case those don't
+fit on the same line.
+
+[source,clojure]
+----
+;; good
+(defn fibo-iter
+  ([n] (fibo-iter 0 1 n))
+  ([curr nxt n]
+   (cond
+     (zero? n) curr
+     :else (recur nxt (+' curr nxt) (dec n)))))
+
+;; okay - the line break delimits a cond pair
+(defn fibo-iter
+  ([n] (fibo-iter 0 1 n))
+  ([curr nxt n]
+   (cond
+     (zero? n)
+     curr
+
+     :else
+     (recur nxt (+' curr nxt) (dec n)))))
+
+;; bad
+(defn fibo-iter
+  ([n] (fibo-iter 0 1 n))
+
+  ([curr nxt n]
+   (cond
+     (zero? n) curr
+
+     :else (recur nxt (+' curr nxt) (dec n)))))
+----
+
+Occasionally, it might seem like a good idea to add a blank line
+here and there in a longer function definition, but if you get to this
+point you should also consider whether this long function isn't doing
+too much and could potentially be broken down.
 
 === No Trailing Whitespace [[no-trailing-whitespace]]
 
